@@ -4,6 +4,9 @@
 =======================================================
 
 
+Apr 08 2010      gamma_only option spreaded to plot.x .
+                 Test03 and Test04 updated. (AF)
+
 Apr 07 2010      gamma_only option included in ccalbec. Test04 updated. 
                  Parallelism over kpt included in plot.x . (AF)
 
